# bevy_test_asset_v2

./: .gitignore  Cargo.toml  README.md
assets/images/: suv.texture_atlas  tiles.atlas_builder  tiles.texture_atlas_config
src/: main.rs  texture_atlas_builder.rs  texture_atlas_builder_loader.rs  texture_atlas_loader.rs
