[package]
edition = "2021"
name = "bevy_texture_atlas_asset_builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main", features=["filesystem_watcher"]}
rectangle-pack = "0.4.2"
ron = "0.8.0"
serde = {version = "1", features = ["derive"]}
thiserror = "1.0.44"
